--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -61,9 +61,26 @@ import Row from "../../components/Row.astro"
 </div>
 
 
-<Section title="Rigid Body Kinetics"></Section>
+<Section title="Rigid body kinetics"></Section>
 
 <SubSection title="Center of mass (COM)" id="center_of_mass">
+
+        
+<CalloutContainer slot="cards">
+<CalloutCard title="Application Alert!">
+<p>
+<a href="/dyn/capsizing_ships">Ship stability</a> uses <strong> Center of mass </strong> by ensuring the centers of gravity and bouyancy are in proper locations
+to avoid capsizing when out at sea.
+</p>
+<p>
+    <Image alt = "The MV Golden Ray" src = "/dyn/the_capsizing_ship/Capsized_ship.jpg" width = 5> The MV Golden Ray</Image>
+
+    In 2019, center of gravity and bouyancy calculations were done incorrectly, resulting in the MV Golden Ray to capsize just off the coast of Brunswick, Georgia.  
+</p>
+</CalloutCard>
+</CalloutContainer>
+
+
 
     <p>
         The total mass of a rigid body is as follows:
