--- a/src/pages/dyn/track_transition_curves.astro
+++ b/src/pages/dyn/track_transition_curves.astro
@@ -281,8 +281,8 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     say this is that the curvature is a linear function of the
     distance along the curve. To see that this is the same
     thing, we write the acceleration in a <a
-    href="rvt.html">tangential/normal basis</a> as  For <DisplayEquation equation=" \\vec{a} =    \\ddot{s} \\, \\hat{e}_t + \\kappa v^2 \\, \\hat{e}_n. " />
-    constant-speed motion with speed \(v\), the distance along the
+    href="rvt.html">tangential/normal basis</a> as  <DisplayEquation equation=" \\vec{a} =    \\ddot{s} \\, \\hat{e}_t + \\kappa v^2 \\, \\hat{e}_n. " />
+    For constant-speed motion with speed \(v\), the distance along the
     curve satisfies <InlineEquation equation=" \\dot{s} = v = \\text{constant}" />, so
     <InlineEquation equation="\\ddot{s} = 0" />. The acceleration vector thus only has a
     normal component, and this has magnitude proportional to the
