car model centered eq

--- a/src/pages/dyn/accelerating_and_braking.astro
+++ b/src/pages/dyn/accelerating_and_braking.astro
@@ -510,7 +510,7 @@ import Row from "../../components/Row.astro"
         drag equation</a> which is a good approximation for
         medium- to high-velocity motion in air:
         </p>
-        <p><InlineEquation equation="F_{\\rm D} = \\frac{1}{2} \\rho v^2 C_{\\rm D} A" /></p>
+        <p><DisplayEquation equation="F_{\\rm D} = \\frac{1}{2} \\rho v^2 C_{\\rm D} A" /></p>
         <p>
         Here <InlineEquation equation="F_{\\rm D}" /> is the drag force, <InlineEquation equation="\\rho = 1.23\\rm\\ kg/m^3"/> is the air density, \(v\) is the velocity, <InlineEquation equation="C_{\\ D}" /> is the drag coefficient (taken to be 0.3 for the
         Mustang), and \(A\) is the reference area (approximately the
