quadratic drag model caption

--- a/src/pages/dyn/projectiles_with_air_resistance.astro
+++ b/src/pages/dyn/projectiles_with_air_resistance.astro
@@ -269,6 +269,15 @@ import DisplayTable from "../../components/DisplayTable.astro"
       </Col>
     </PrairieDrawCanvas>
 
+          <p class="figureCaption">
+            Trajectories of a projectile in a vacuum (blue) and
+            subject to quadratic drag from air resistance (red). The
+            air density is <InlineEquation equation = "\\rho = 1.225 \\rm \\ kg / m ^ 3"/> (standard
+            sea-level atmosphere) and the acceleration due to gravity
+            is <InlineEquation equation = "g = 9.81 \\rm \\ m / s ^ 2"/>. A regulation baseball has a mass
+            of about <InlineEquation equation = "m = 145 \\rm \\ g"/> and a diameter of about <InlineEquation equation = "D = 7.5 \\rm \\ cm"/>.
+          </p>
+
     <CalloutContainer slot="cards">
         <CalloutCard>
             <p>
