--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -212,10 +212,15 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
       </p>
      </PrairieDrawCanvas>
 		 
-    <CalloutContainer slot="cards">
-      <CalloutCard title="Application alert!">
+    <CalloutContainer slot = "cards">
+      <CalloutCard title = "Application alert!">
         <p>
-          <a href="/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors.</strong>
+          <a href = "/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors.</strong>
+        </p>
+      </CalloutCard>
+      <CalloutCard title = "Application alert!">
+        <p>
+          <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>velocity and acceleration vectors.</strong>
         </p>
       </CalloutCard>
     </CalloutContainer>
