--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -42,6 +42,16 @@ import DisplayTable from "../../components/DisplayTable.astro"
   <CalloutContainer slot = "cards">
     <CalloutCard title = "Application alert!">
       <p>
+        <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics.</strong>
+      </p>
+    </CalloutCard>
+    <CalloutCard title = "Application alert!">
+      <p>
+        <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics.</strong>
+      </p>
+    </CalloutCard>
+    <CalloutCard title = "Application alert!">
+      <p>
         <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics.</strong>
       </p>
     </CalloutCard>
