--- a/src/pages/dyn/projectiles_with_air_resistance.astro
+++ b/src/pages/dyn/projectiles_with_air_resistance.astro
@@ -84,7 +84,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
   <CalloutContainer slot = "cards">
     <CalloutCard title = "Reference material">
       <p>
-        This application uses <a href = "/dyn/particle_kinetics">particle kinetics.</a>
+        <ul>
+            <li><a href = "/dyn/particle_kinematics#velocity_acceleration_vectors">Position, velocity, and acceleration</a></li>
+            <li><a href = "/dyn/particle_kinetics">Kinetics of point masses</a></li>
+        </ul>
       </p>
     </CalloutCard>
   </CalloutContainer>
