--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -38,29 +38,26 @@ import DisplayTable from "../../components/DisplayTable.astro"
 </div>
 
 
-<Section title="Particle kinetics" id="particle_kinetics">
-  <CalloutContainer slot = "cards">
-    <CalloutCard title = "Application alert!">
-      <p>
-        <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics.</strong>
-      </p>
-    </CalloutCard>
-    <CalloutCard title = "Application alert!">
-      <p>
-        <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics.</strong>
-      </p>
-    </CalloutCard>
-    <CalloutCard title = "Application alert!">
-      <p>
-        <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics.</strong>
-      </p>
-    </CalloutCard>
-  </CalloutContainer>
-</Section>
+<Section title="Particle kinetics" id="particle_kinetics"/>
 
 <SubSection title="Classical mechanics" id="classical_mechanics">
 
     <CalloutContainer slot="cards">
+      <CalloutCard title = "Application alert!">
+        <p>
+          <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics.</strong>
+        </p>
+      </CalloutCard>
+      <CalloutCard title = "Application alert!">
+        <p>
+          <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics.</strong>
+        </p>
+      </CalloutCard>
+      <CalloutCard title = "Application alert!">
+        <p>
+          <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics.</strong>
+        </p>
+      </CalloutCard>
         <CalloutCard>
             <p>
                 If we have objects which are either very massive, very
