--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -55,20 +55,7 @@ import Row from "../../components/Row.astro"
 </div>
 
 
-<Section title="Rigid body kinetics">
-    <CalloutContainer slot = "cards">
-        <CalloutCard title = "Application alert!">
-            <p>
-                <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>rigid body kinematics.</strong>
-            </p>
-        </CalloutCard>
-        <CalloutCard title = "Application alert!">
-            <p>
-                <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>rigid body kinematics.</strong>
-            </p>
-        </CalloutCard>
-    </CalloutContainer>
-</Section>
+<Section title="Rigid body kinetics"/>
 
 <SubSection title="Center of mass (COM)" id="center_of_mass">
 
@@ -279,6 +266,19 @@ import Row from "../../components/Row.astro"
             </Center>
         </div>
     </Example>
+
+    <CalloutContainer slot = "cards">
+        <CalloutCard title = "Application alert!">
+            <p>
+                <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>rigid body kinematics.</strong>
+            </p>
+        </CalloutCard>
+        <CalloutCard title = "Application alert!">
+            <p>
+                <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>rigid body kinematics.</strong>
+            </p>
+        </CalloutCard>
+    </CalloutContainer>
 
 </SubSection>
 
