images in callout cards

--- a/src/pages/dyn/particle_kinematics.astro
+++ b/src/pages/dyn/particle_kinematics.astro
@@ -217,10 +217,18 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <p>
           <a href = "/dyn/track_transition_curves">Track transition curves</a> uses <strong>velocity and acceleration vectors.</strong>
         </p>
+        <Image src = "/dyn/particle_kinematics/highway.jpg" width = "7"/>
+        <p>
+          Velocity and acceleration vectors can be used to analyze optimal road curves for driving.
+        </p>
       </CalloutCard>
       <CalloutCard title = "Application alert!">
         <p>
           <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>velocity and acceleration vectors.</strong>
+        </p>
+        <Image src = "/dyn/particle_kinematics/baseball_field.jpg" width = "7"/>
+        <p>
+          Velocity and acceleration vectors can be used to analyze objects following projectile motion with air resistance.
         </p>
       </CalloutCard>
     </CalloutContainer>
@@ -466,6 +474,10 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
         <CalloutCard title="Application alert!">
           <p>
             <a href="/dyn/celestial_velocities">Celestial velocities</a> uses <strong>angular velocity.</strong>
+          </p>
+          <PrairieDrawCanvas id = "aov-fe-c" width = "250" height = "250"/>
+          <p>
+            Angular velocity is an important variable to consider when analyzing celestial objects revolving around one another.
           </p>
         </CalloutCard>
       </CalloutContainer>
