--- a/src/pages/dyn/particle_kinetics.astro
+++ b/src/pages/dyn/particle_kinetics.astro
@@ -47,15 +47,27 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <p>
           <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>particle kinetics.</strong>
         </p>
+        <Image src = "/dyn/particle_kinetics/red_car.jpg" width = "7"/>
+        <p>
+          Particle kinetics can be used to analyze how cars accelerate and brake.
+        </p>
       </CalloutCard>
       <CalloutCard title = "Application alert!">
         <p>
           <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>particle kinetics.</strong>
         </p>
+        <Image src = "/dyn/particle_kinetics/avb_09A186_small.jpg" width = "7"/>
+        <p>
+          Particle kinetics can be used to analyze how vehicles move along banks.
+        </p>
       </CalloutCard>
       <CalloutCard title = "Application alert!">
         <p>
           <a href = "/dyn/projectiles_with_air_resistance">Projectiles with air resistance</a> uses <strong>particle kinetics.</strong>
+        </p>
+        <Image src = "/dyn/particle_kinetics/baseball_field.jpg" width = "7"/>
+        <p>
+          Particle kinetics can be used to analyze objects following projectile motion with air resistance.
         </p>
       </CalloutCard>
         <CalloutCard>
