--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -119,6 +119,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <p>
           <a href = "/dyn/steering_geometry">Steering geometry</a> uses <strong>rigid bodies.</strong>
         </p>
+        <Image src = "/dyn/rigid_body_kinematics/avs_Mercedes_Kubelwagen_G5_600.jpg" width = "7"/>
+        <p>
+          Rigid body kinematics can be used to analyze how steering with the front wheels affects how an entire vehicle turns.
+        </p>
       </CalloutCard>
     </CalloutContainer>
   </SubSubsection>
@@ -839,6 +843,10 @@ import DisplayTable from "../../components/DisplayTable.astro"
     <ul>
       <li><a href = "/dyn/four_bar_linkages">Four-bar linkages</a></li>
     </ul>
+    <PrairieDrawCanvas id = "aml-ft-c" width = "250" height = "250"/>
+    <p>
+      Four-bar linkages are a prominent example of constrained motion being in effect.
+    </p>
   </CalloutCard>
 </CalloutContainer>
 </SubSection>
