--- a/src/pages/dyn/rigid_body_kinetics.astro
+++ b/src/pages/dyn/rigid_body_kinetics.astro
@@ -272,10 +272,18 @@ import Row from "../../components/Row.astro"
             <p>
                 <a href = "/dyn/accelerating_and_braking">Accelerating and braking</a> uses <strong>rigid body kinematics.</strong>
             </p>
+            <Image src = "/dyn/rigid_body_kinetics/red_car.jpg" width = "7"/>
+            <p>
+                Rigid body kinetics can be used to analyze how cars accelerate and brake.
+            </p>
         </CalloutCard>
         <CalloutCard title = "Application alert!">
             <p>
                 <a href = "/dyn/banked_turns">Banked turns</a> uses <strong>rigid body kinematics.</strong>
+            </p>
+            <Image src = "/dyn/rigid_body_kinetics/avb_09A186_small.jpg" width = "7"/>
+            <p>
+                Rigid body kinetics can be used to analyze how vehicles move along banks.
             </p>
         </CalloutCard>
     </CalloutContainer>
