suspens. w. watts. link. indenting

--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -600,7 +600,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           href="http://en.wikipedia.org/wiki/Watt's_linkage#History">Watt
           wrote</a> in 1784:
         </p>
-        <blockquote>
+        <blockquote style = "display: block; margin-top: 1em; margin-bottom: 1em; margin-left: 40px; margin-right: 40px;">
           I have got a glimpse of a method of causing a piston rod to
           move up and down perpendicularly by only fixing it to a
           piece of iron upon the beam, without chains or perpendicular
