capsizing ship added to list

--- a/src/pages/dyn.astro
+++ b/src/pages/dyn.astro
@@ -57,6 +57,7 @@ import "../../public/static/css/course_home_pages.css"
       <li><a href = "/dyn/banked_turns">Banked turns</a></li>
       <li><a href = "/dyn/steering_geometry">Steering geometry</a></li>
       <li><a href = "/dyn/four_bar_linkages">Four-bar linkages</a></li>
+      <li><a href = "/dyn/capsizing_ships">Capsizing ships</a></li>
     </ol>    
   </section>
   <div style="height:40px"></div>
