--- a/src/pages/dyn/four_bar_linkages.astro
+++ b/src/pages/dyn/four_bar_linkages.astro
@@ -774,7 +774,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         </p>
         <p>
           Two other useful geometric quantities shown below are the
-          Grashof index <InlineEquation equation = "G"/> and the validity index <InlineEquation equation = "V."/> If <InlineEquation equation = "G \gt 0"/>
+          Grashof index <InlineEquation equation = "G"/> and the validity index <InlineEquation equation = "V."/> If <InlineEquation equation = "G \\gt 0"/>
           then the shortest link is able to fully rotate through
           <InlineEquation equation = "360 ^ \\circ"/> (the linkage is “Grashof”), while if <InlineEquation equation = "G \\lt 0"/>
           then the shortest link only reciprocates (the linkage is
